# org_frappe_02

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
itc_org_frappe/: hooks.py  modules.txt
itc_org_frappe/config/: desktop.py
itc_org_frappe/doctype/org_employee/: org_employee.json  org_employee.py
itc_org_frappe/org_chart/doctype/org_employee/: org_employee.js  org_employee.json
itc_org_frappe/org_chart/page/org_chart/: org_chart.json
itc_org_frappe/page/org_chart/: org_chart.js  org_chart.json  org_chart.py
