[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "itc_org_frappe"
authors = [
    { name = "ITChamps", email = "" }
]
description = "ITC Org Frappe App"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Nusrath02/org_frappe_02"
