[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itc_org_frappe"
authors = [
    { name = "ITChamps", email = "" }
]
description = "ITC Org Frappe App"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = []
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "itc_org_frappe.__version__" }

[project.urls]
Homepage = "https://github.com/Nusrath02/org_frappe_02"
